* libexif

  Added support for UTF8 file path on Win32. In exif_loader_write_file() (exif-loader.c) changed:

  f = fopen (path, "rb");

  to:

#ifdef WIN32
    {
        int charsRequired = MultiByteToWideChar( CP_UTF8, 0, path, -1, NULL, 0 );

        if ( charsRequired > 0 )
        {
            WCHAR* filenameUtf16 = (WCHAR*) malloc( sizeof( WCHAR ) * charsRequired );

            if ( MultiByteToWideChar( CP_UTF8, 0, path, -1, filenameUtf16, charsRequired ) > 0 )
            {
                f = _wfopen( filenameUtf16, L"r" );
            }

            free( filenameUtf16 );
        }
    }
#else
    f = fopen (path, "rb");
#endif

  Also added:
#ifdef WIN32
    #include <windows.h>
#endif